Bug 380980 - Font names with spaces (in font meta-data) are not processed correctly.
Summary: Font names with spaces (in font meta-data) are not processed correctly.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_style (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
: 416789 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-08 17:16 UTC by v65mnz
Modified: 2020-01-26 15:58 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments
gtk3 settings file generated by KDE Gtk Configurator (262 bytes, text/plain)
2017-06-08 17:16 UTC, v65mnz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description v65mnz 2017-06-08 17:16:53 UTC
Created attachment 105993 [details]
gtk3 settings file generated by KDE Gtk Configurator

When you set "Roboto Condensed", actually used just "Roboto" in Gtk3 apps.

When I run gnome session "Roboto Condensed" setting is handled normally.
Because of this bug I need to create and use another version of this font with metadata not containing spaces.

I created new user (no old configs at all, only predefined from /etc/skel) and changed font to Roboto Condensed in Gnome, but this "settings.ini" was not even created.
Gnome3 handles it's settings using dconf.

I also tried to use quotes in my actual config, both double and single, around font name, like «"Roboto Condenced" 10», but it just defaulted to dejevu(probably).

I tested this on Debian Testing and Kubuntu (in VM) under KDE (5.8.6 and 5.9) and same result.
Fonts package in debian/ubuntu called: fonts-roboto.

Probably module expects font size after first space after font name, because size is also affected.
Comment 1 v65mnz 2017-06-08 17:28:56 UTC
Kubuntu I've tested is from 17.04 release with KDE 5.9.4 update.
Comment 2 Aleix Pol 2017-06-15 16:11:33 UTC
This is weird, if I use this font I get this setting:
gtk-font-name="Roboto Condensed Regular 8"

Can you make sure it's set up properly on your system? It looks odd that n yours it says "Condenced".
Comment 3 v65mnz 2017-06-15 22:58:32 UTC
(In reply to Aleix Pol from comment #2)
> This is weird, if I use this font I get this setting:
> gtk-font-name="Roboto Condensed Regular 8"
> 
> Can you make sure it's set up properly on your system? It looks odd that n
> yours it says "Condenced".

Sorry, I rechecked everything now, font setting I get in settings.ini is:

    gtk-font-name=Roboto Condensed Regular 11

both in ubuntu and in debian. And no actual Condensed font used.
Font installed from distribution package by standart method.
Attached file is wrong because i was heavily experimenting with configuration.
Comment 4 Can Aksu 2018-11-30 10:28:09 UTC
I'm having the same problem. A comma should be added after the font name:

gtk-font-name="Roboto Condensed, Regular 8
Comment 5 Can Aksu 2020-01-26 15:17:31 UTC
*** Bug 416789 has been marked as a duplicate of this bug. ***
Comment 6 Mikhail Zolotukhin 2020-01-26 15:58:42 UTC
Git commit 8bf4efd764309d27c53d1f3b7ce4e235d9979127 by Mikhail Zolotukhin.
Committed on 26/01/2020 at 15:57.
Pushed by gikari into branch 'Plasma/5.18'.

Correctly process font, that has multiple words in family name

Summary:
Separate family from other font characteristics with comma. It
partially solves the issue, because font dialog in Fonts KCM
allows you to choose the font with family name, constructed
with the font style.
FIXED-IN: 5.18.0

Test Plan:
# Restart `kded5`
# Change font in Fonts KCM to one, which name consist of two or more words separated with spaces
# GTK applications should now correctly use that font

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26928

M  +1    -1    kded/configvalueprovider.cpp

https://commits.kde.org/kde-gtk-config/8bf4efd764309d27c53d1f3b7ce4e235d9979127