Correctly process font, that has multiple words in family name

Summary:
Separate family from other font characteristics with comma. It
partially solves the issue, because font dialog in Fonts KCM
allows you to choose the font with family name, constructed
with the font style.

BUG: 380980
FIXED-IN: 5.18.0

Test Plan:
# Restart `kded5`
# Change font in Fonts KCM to one, which name consist of two or more words separated with spaces
# GTK applications should now correctly use that font

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26928